Release history for Dist-Zilla-Plugin-INI-Baked

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

0.001000 2014-08-03T06:41:00Z
 - First version.
