@@ -1,9 +1,16 @@
 Release history for Dist-Zilla-Plugin-INI-Baked
 
 {{$NEXT}}
+ [00 Trivial]
+ - no code changes.
+ - whitespace reduced.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001000, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
 0.001000 2014-08-03T06:41:00Z
  - First version.
